Revise privacy policy for compliance and clarity
Updated privacy policy to reflect current legal requirements and organizational practices.

--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -1,149 +1,108 @@
-# PRIVACY_POLICY_v2.0
+<!-- File Path: legal/privacy-policy.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Privacy Policy | Fundacja BBS — Better Balance System</title>
+    <meta name="description" content="Privacy Policy of Fundacja BBS — Better Balance System in accordance with GDPR (RODO)." />
+    <link rel="stylesheet" href="../assets/css/main.css" />
+</head>
+<body>
 
-**Canonical Repository Location (Recommended):**
-/legal/PRIVACY_POLICY.md
+<header class="legal-header">
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p>Personal data protection and GDPR compliance framework</p>
+    </div>
+</header>
 
----
+<main class="container legal-content">
 
-# 1. Data Controller
+    <section>
+        <h2>1. Data Controller</h2>
+        <p>The controller of personal data is Fundacja BBS — Better Balance System, registered in the National Court Register (KRS 0001220296), with its registered office in Brodnica, Poland.</p>
+        <p>Contact for data protection matters is available via the official communication channels published on the Foundation’s website.</p>
+    </section>
 
-The Data Controller responsible for this repository and related project infrastructure is:
+    <section>
+        <h2>2. Legal Basis for Processing</h2>
+        <p>Personal data is processed in accordance with Regulation (EU) 2016/679 (GDPR) and applicable Polish data protection laws.</p>
+        <p>Processing is based on one or more of the following legal grounds:</p>
+        <ul>
+            <li>Consent of the data subject (Art. 6(1)(a) GDPR);</li>
+            <li>Performance of a contract (Art. 6(1)(b));</li>
+            <li>Compliance with a legal obligation (Art. 6(1)(c));</li>
+            <li>Legitimate interests pursued by the Foundation (Art. 6(1)(f)), provided such interests are not overridden by fundamental rights and freedoms.</li>
+        </ul>
+    </section>
 
-**FUNDACJA BBS — Better Balance System**
-KRS: 0001220296
-NIP: 8741817187
-REGON: 543863137
-Registered Address: Sienkiewicza 1/4, 87-300 Brodnica, Poland
-Jurisdiction: Republic of Poland (European Union)
+    <section>
+        <h2>3. Categories of Data</h2>
+        <p>The Foundation may process identification data, contact data, professional or academic affiliation data, project participation data, and technical data related to website usage.</p>
+        <p>Special categories of data are processed only where explicitly required by law or with explicit consent.</p>
+    </section>
 
-Contact Email: [bbs.contactproton.me@proton.me](mailto:bbs.contactproton.me@proton.me)
+    <section>
+        <h2>4. Purpose of Processing</h2>
+        <ul>
+            <li>Implementation of statutory objectives and research activities;</li>
+            <li>Grant, partnership, and cooperation management;</li>
+            <li>Volunteer and employment administration;</li>
+            <li>Compliance with legal and accounting obligations;</li>
+            <li>Ensuring information security and system integrity.</li>
+        </ul>
+    </section>
 
-For all data protection matters, the Foundation acts through its authorized representative.
+    <section>
+        <h2>5. Data Retention</h2>
+        <p>Personal data is retained only for the period necessary to fulfill the purpose for which it was collected, or as required by applicable law (including accounting and archival obligations).</p>
+        <p>Retention periods are defined in internal data governance and data retention policies.</p>
+    </section>
 
----
+    <section>
+        <h2>6. Data Subject Rights</h2>
+        <p>Data subjects have the right to:</p>
+        <ul>
+            <li>Access their personal data;</li>
+            <li>Rectify inaccurate data;</li>
+            <li>Request erasure ("right to be forgotten");</li>
+            <li>Restrict processing;</li>
+            <li>Data portability where applicable;</li>
+            <li>Object to processing based on legitimate interest;</li>
+            <li>Lodge a complaint with the competent supervisory authority (President of the Personal Data Protection Office in Poland).</li>
+        </ul>
+    </section>
 
-# 2. Scope of This Policy
+    <section>
+        <h2>7. Data Security</h2>
+        <p>The Foundation implements appropriate technical and organizational measures to ensure confidentiality, integrity, and availability of personal data.</p>
+        <p>Security practices include access control, encryption where appropriate, audit trails, and risk assessment procedures.</p>
+    </section>
 
-This Privacy Policy applies to:
+    <section>
+        <h2>8. AI Systems and Data Processing</h2>
+        <p>Where digital systems, including analytical or AI-based tools, are used in Foundation projects, processing is conducted in compliance with GDPR principles of transparency, data minimization, and accountability.</p>
+        <p>Where required, Data Protection Impact Assessments (DPIA) and risk assessments are performed.</p>
+    </section>
 
-* the public repository infrastructure,
-* associated project documentation,
-* any communication initiated via provided contact email.
+    <section>
+        <h2>9. International Transfers</h2>
+        <p>If personal data is transferred outside the European Economic Area, appropriate safeguards are implemented in accordance with Chapter V of the GDPR.</p>
+    </section>
 
-At the current development stage, the Foundation does not operate a standalone public website with active user data collection mechanisms.
+    <section>
+        <h2>10. Updates</h2>
+        <p>This Privacy Policy may be updated to reflect changes in legal requirements or operational practices. The current version is published on this website.</p>
+    </section>
 
----
+</main>
 
-# 3. Categories of Data Processed
+<footer class="legal-footer">
+    <div class="container">
+        <p>© 2026 Fundacja BBS — Better Balance System. All rights reserved.</p>
+    </div>
+</footer>
 
-At this stage, the Foundation does not actively collect personal data through forms, user accounts, or tracking systems.
-
-However, limited technical data may be processed automatically by hosting providers, including:
-
-* IP address,
-* browser type and version,
-* date and time of access,
-* basic server request metadata.
-
-Such data is processed by infrastructure providers (e.g., repository hosting services) in accordance with their own privacy policies.
-
-The Foundation does not use:
-
-* Google Analytics,
-* advertising tracking systems,
-* profiling tools,
-* behavioral monitoring technologies.
-
----
-
-# 4. Legal Basis (GDPR Article 6)
-
-Where technical data processing occurs, it is based on:
-
-* Article 6(1)(f) GDPR — legitimate interest (system security, integrity monitoring, and infrastructure stability),
-* Article 6(1)(b) GDPR — communication response when a user initiates contact.
-
-No automated decision-making or profiling is performed.
-
----
-
-# 5. Data Retention
-
-The Foundation does not maintain independent databases of visitor data.
-
-Any technical logs retained by hosting providers are governed by their internal retention policies.
-
-Email correspondence is retained only as necessary for:
-
-* responding to inquiries,
-* maintaining institutional documentation integrity,
-* legal compliance obligations.
-
----
-
-# 6. Data Sharing
-
-The Foundation does not sell, rent, or commercially distribute personal data.
-
-Data may be processed by infrastructure providers strictly for technical hosting and security purposes.
-
-No cross-border data transfers are initiated by the Foundation beyond those inherent to infrastructure hosting providers.
-
----
-
-# 7. Data Subject Rights
-
-Under the GDPR, individuals have the right to:
-
-* request access to their personal data,
-* request rectification,
-* request erasure (where legally applicable),
-* request restriction of processing,
-* object to processing based on legitimate interest,
-* lodge a complaint with a supervisory authority.
-
-In Poland, the supervisory authority is:
-
-President of the Personal Data Protection Office (UODO).
-
-Requests may be submitted to the contact email listed above.
-
----
-
-# 8. Security Measures
-
-The Foundation applies structural integrity principles to protect documentation and communications, including:
-
-* controlled access management,
-* no embedded tracking scripts,
-* no hidden profiling mechanisms,
-* secure email communication practices.
-
-Security is implemented proportionally to the current scale of operations.
-
----
-
-# 9. Policy Updates
-
-This Privacy Policy may be updated as the Foundation infrastructure evolves.
-
-Significant structural changes in data processing will be documented through version-controlled updates in the repository.
-
----
-
-# 10. Current Operational Status
-
-As of this version:
-
-* No standalone data collection platform is active.
-* No automated monitoring or profiling is conducted.
-* No commercial data exploitation occurs.
-
-The Foundation operates in a laboratory-stage development model prioritizing structural integrity and regulatory alignment.
-
----
-
-**Version:** 2.0
-**Last Updated:** 2026
-
----
+</body>
+</html>
