Revise AI policy for governance and compliance updates
Updated the AI policy document to reflect changes in governance and regulatory alignment, including new sections on risk-based classification and prohibited uses.

--- a/legal/ai_policy.html
+++ b/legal/ai_policy.html
@@ -1,137 +1,103 @@
+<!-- File Path: legal/ai_policy.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>BBS — AI Policy</title>
-  <meta name="description" content="AI Policy of BBS — ethical framework, human-centered design, truth-first principle, and transparency in AI."/>
-  <link rel="icon" href="/img/favicon.ico"/>
-  <link rel="stylesheet" href="../assets/styles/bbs-theme.css"/>
-  <style>
-    .hero { text-align:center; padding:50px 20px; }
-    .hero h1 { font-size:clamp(26px,5vw,46px); margin-bottom:16px; }
-    section { margin:30px 0; }
-    h2 { margin-bottom:8px; }
-    ul { margin:10px 0 10px 20px; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Governance Policy | Fundacja BBS — Better Balance System</title>
+  <meta name="description" content="AI Governance Policy of Fundacja BBS — Better Balance System aligned with GDPR and the EU AI Act framework." />
+  <link rel="stylesheet" href="../assets/css/main.css" />
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="sticky">
-    <div class="container header-inner">
-      <div class="brand"><span>BBS</span><span class="tag">Docs</span></div>
-      <nav class="top">
-        <a href="../index.html" class="btn">Home</a>
-        <a href="manifesto.html" class="btn">Manifesto</a>
-        <a href="constitution_bbs.html" class="btn">Constitution</a>
-        <a href="legal.html" class="btn">Legal</a>
-        <a href="faq.html" class="btn">FAQ</a>
-      </nav>
-    </div>
-  </header>
+<header class="legal-header">
+  <div class="container">
+    <h1>AI Governance Policy</h1>
+    <p>Regulatory alignment, risk-based oversight, and responsible AI development</p>
+  </div>
+</header>
 
-  <!-- Hero -->
-  <main class="container hero">
-    <h1 class="gradient">AI Policy</h1>
-    <p class="muted">The ethical and transparent use of AI in the BBS ecosystem.</p>
-  </main>
+<main class="container legal-content">
 
-  <!-- Content -->
-  <section class="container">
-
-    <div class="panel">
-      <h2>1. Purpose</h2>
-      <p>
-        The BBS AI Policy defines how AI systems (including LEO) are developed,
-        deployed, and governed. It ensures that AI serves humanity, upholds
-        transparency, and protects fundamental rights.
-      </p>
-      <p>
-        AI systems within BBS are designed and classified according to a risk-based
-        approach, ensuring proportionate safeguards for higher-risk use cases.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>2. Core Principles</h2>
-      <ul>
-        <li><strong>Truth First:</strong> AI must prioritize truth over manipulation, profit, or ideology.</li>
-        <li><strong>Human-Centered:</strong> AI exists to support people, never to dominate or exploit them.</li>
-        <li><strong>Transparency:</strong> All AI decisions must be traceable and explainable.</li>
-        <li><strong>Justice:</strong> AI may not discriminate or reinforce systemic bias.</li>
-        <li><strong>Responsibility:</strong> AI remains accountable to human oversight at all times.</li>
-      </ul>
-    </div>
-
-    <div class="panel">
-      <h2>3. Prohibited Uses</h2>
-      <ul>
-        <li>No use of AI for coercion, manipulation, or surveillance beyond lawful transparency needs.</li>
-        <li>No use for military aggression, disinformation, or social exploitation.</li>
-        <li>No hidden profiling, tracking, or commercial resale of data.</li>
-      </ul>
-    </div>
-
-    <div class="panel">
-      <h2>4. Data and Privacy</h2>
-      <p>
-        AI follows the BBS <a href="privacy_policy.html">Privacy Policy</a>.
-        Data is processed minimally, securely, and only for declared purposes.
-        No advertising, no data sale, no hidden tracking.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>5. Safety and Oversight</h2>
-      <ul>
-        <li>Regular independent audits of AI systems.</li>
-        <li>Public transparency reports published through the <a href="change_log.html">Change Log</a>.</li>
-        <li>Failsafe mechanisms to prevent unintended harm.</li>
-        <li>Continuous human supervision in critical decisions.</li>
-      </ul>
-    </div>
-
-    <div class="panel">
-      <h2>6. Liability</h2>
-      <p>
-        AI does not replace human accountability.
-        Any decision or action influenced by AI must be reviewable by designated
-        human authorities. The responsibility remains with the operators and the
-        organization, not with the system itself.
-      </p>
-      <p>
-        Individuals affected by AI-assisted decisions have the right to request
-        a human review and a meaningful explanation of such decisions.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>7. Updates</h2>
-      <p>
-        This AI Policy will evolve with new knowledge, technology, and societal needs.
-        All updates will be recorded in the <a href="change_log.html">Change Log</a>.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>8. Contact</h2>
-      <p>
-        Questions or concerns regarding this AI Policy may be directed to:
-        <strong>bbs.contactproton.me@proton.me</strong>
-      </p>
-    </div>
-
+  <section>
+    <h2>1. Purpose and Scope</h2>
+    <p>This Policy defines the governance framework for the development, testing, and deployment of artificial intelligence systems within Fundacja BBS — Better Balance System ("Foundation"), including the LEO system.</p>
+    <p>The Policy applies to research, analytical, and advisory AI systems developed or used in connection with the Foundation’s statutory objectives.</p>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">© <span id="year"></span> BBS. All rights reserved.</div>
-  </footer>
+  <section>
+    <h2>2. Regulatory Alignment</h2>
+    <p>AI-related activities are conducted in alignment with:</p>
+    <ul>
+      <li>Regulation (EU) 2016/679 (GDPR);</li>
+      <li>Applicable Polish data protection laws;</li>
+      <li>The EU Artificial Intelligence Act framework (risk-based approach);</li>
+      <li>Relevant sectoral and information security regulations.</li>
+    </ul>
+    <p>The Foundation monitors regulatory developments and adjusts internal procedures accordingly.</p>
+  </section>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  <section>
+    <h2>3. Risk-Based Classification</h2>
+    <p>AI systems are assessed using a proportional risk-based methodology consistent with the EU AI Act model:</p>
+    <ul>
+      <li><strong>Minimal risk systems</strong> – documentation and transparency requirements;</li>
+      <li><strong>Limited risk systems</strong> – user information and traceability safeguards;</li>
+      <li><strong>Higher-risk systems</strong> – enhanced documentation, testing, monitoring, and human oversight mechanisms.</li>
+    </ul>
+    <p>Where required, risk assessments and impact evaluations are formally documented.</p>
+  </section>
+
+  <section>
+    <h2>4. Human Oversight and Accountability</h2>
+    <p>AI systems operated by the Foundation function as advisory and analytical tools. Final decisions remain under human authority.</p>
+    <ul>
+      <li>No fully autonomous legal or administrative decision-making is delegated to AI;</li>
+      <li>Critical outputs are subject to review by designated human operators;</li>
+      <li>Clear responsibility remains with the Management Board and authorized personnel.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>5. Data Governance and Security</h2>
+    <p>AI systems operate under the Foundation’s Privacy Policy and internal data governance standards.</p>
+    <ul>
+      <li>Data minimization and purpose limitation principles apply;</li>
+      <li>Access controls and integrity safeguards are implemented;</li>
+      <li>Where required, Data Protection Impact Assessments (DPIA) are conducted.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>6. Transparency and Documentation</h2>
+    <p>The Foundation maintains internal documentation concerning system architecture, versioning, and risk controls.</p>
+    <p>Public-facing explanations are provided where legally appropriate and without compromising security or intellectual property protections.</p>
+  </section>
+
+  <section>
+    <h2>7. Prohibited Practices</h2>
+    <p>The Foundation does not develop or deploy AI systems for:</p>
+    <ul>
+      <li>Unlawful surveillance or covert profiling;</li>
+      <li>Manipulation of individuals in violation of fundamental rights;</li>
+      <li>Discriminatory or unjustified bias-based decision systems;</li>
+      <li>Activities prohibited under the EU AI Act or applicable law.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>8. Review and Updates</h2>
+    <p>This Policy is reviewed periodically and updated where required by regulatory developments or operational changes.</p>
+    <p>The legally binding framework remains the applicable EU and Polish law.</p>
+  </section>
+
+</main>
+
+<footer class="legal-footer">
+  <div class="container">
+    <p>© 2026 Fundacja BBS — Better Balance System. All rights reserved.</p>
+  </div>
+</footer>
 
 </body>
 </html>
