Revise data retention policy for compliance and clarity
Updated the Data Retention Policy to reflect compliance with GDPR and Polish law, including changes to structure and content.

--- a/legal/data_retention.html
+++ b/legal/data_retention.html
@@ -1,94 +1,82 @@
+<!-- File Path: legal/data_retention.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>BBS — Data Retention & Deletion Policy</title>
-  <meta name="description" content="BBS Data Retention and Deletion Policy — how data is stored, archived, and removed in compliance with GDPR."/>
-  <link rel="icon" href="/img/favicon.ico"/>
-  <link rel="stylesheet" href="../assets/styles/bbs-theme.css"/>
-  <style>
-    .hero { text-align:center; padding:50px 20px; }
-    .hero h1 { font-size:clamp(26px,5vw,46px); margin-bottom:16px; }
-    section { margin:30px 0; }
-    h2 { margin-bottom:8px; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Retention Policy | Fundacja BBS — Better Balance System</title>
+  <meta name="description" content="Data Retention Policy of Fundacja BBS — Better Balance System in compliance with GDPR and Polish law." />
+  <link rel="stylesheet" href="../assets/css/main.css" />
 </head>
 <body>
-  <!-- Header -->
-  <header class="sticky">
-    <div class="container header-inner">
-      <div class="brand"><span>BBS</span><span class="tag">Docs</span></div>
-      <nav class="top">
-        <a href="../index.html" class="btn">Home</a>
-        <a href="manifesto.html" class="btn">Manifesto</a>
-        <a href="constitution_bbs.html" class="btn">Constitution</a>
-        <a href="legal.html" class="btn">Legal</a>
-        <a href="faq.html" class="btn">FAQ</a>
-      </nav>
-    </div>
-  </header>
 
-  <!-- Hero -->
-  <main class="container hero">
-    <h1 class="gradient">Data Retention & Deletion Policy</h1>
-    <p class="muted">How BBS stores, archives, and deletes data in compliance with GDPR and ethical standards.</p>
-  </main>
+<header class="legal-header">
+  <div class="container">
+    <h1>Data Retention Policy</h1>
+    <p>Retention periods, deletion standards, and archival governance</p>
+  </div>
+</header>
 
-  <!-- Content -->
-  <section class="container">
+<main class="container legal-content">
 
-    <div class="panel">
-      <h2>1. General Principles</h2>
-      <p>
-        BBS respects the fundamental right to privacy and data protection.
-        Data is retained only as long as necessary for transparency, accountability,
-        or user services.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>2. Retention Periods</h2>
-      <ul>
-        <li><strong>User Data:</strong> Retained only for the duration of participation or consent.</li>
-        <li>
-          <strong>Audit Logs:</strong> Retained in anonymized form where necessary to ensure
-          system integrity, security, and legal accountability, in accordance with applicable law.
-        </li>
-        <li><strong>Temporary Data:</strong> Deleted automatically after processing.</li>
-      </ul>
-    </div>
-
-    <div class="panel">
-      <h2>3. Right to Deletion</h2>
-      <p>
-        Every user has the right to request erasure of their personal data (“right to be forgotten”).
-        Requests will be processed without undue delay, except where retention is legally required.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>4. Data Archiving</h2>
-      <p>
-        Historical records may be anonymized and archived for research, transparency,
-        or statistical purposes. No personal identifiers are preserved in archives.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>5. Updates</h2>
-      <p>
-        This policy may evolve. All updates are recorded transparently in the
-        <a href="change_log.html">Change Log</a>.
-      </p>
-    </div>
-
+  <section>
+    <h2>1. Purpose</h2>
+    <p>This Policy defines the principles governing retention, archiving, and deletion of data processed by Fundacja BBS — Better Balance System ("Foundation").</p>
+    <p>The Policy is implemented in alignment with Regulation (EU) 2016/679 (GDPR), applicable Polish legislation, and the Foundation’s internal governance framework.</p>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">© <span id="year"></span> BBS — Big Begins Small. All rights reserved.</div>
-  </footer>
-  <script>document.getElementById("year").textContent=new Date().getFullYear();</script>
+  <section>
+    <h2>2. General Principles</h2>
+    <ul>
+      <li>Data is retained only for clearly defined and lawful purposes;</li>
+      <li>Retention periods are proportionate to statutory, contractual, or regulatory obligations;</li>
+      <li>Data minimization and storage limitation principles apply at all times;</li>
+      <li>Secure deletion or anonymization is performed once retention is no longer justified.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>3. Categories and Retention Periods</h2>
+    <p>Retention periods vary depending on data category and legal basis:</p>
+    <ul>
+      <li><strong>Contractual and cooperation data:</strong> retained for the duration of cooperation and subsequent limitation periods under civil law;</li>
+      <li><strong>Accounting and financial documentation:</strong> retained in accordance with Polish accounting and tax regulations;</li>
+      <li><strong>Grant and project documentation:</strong> retained for periods required by funding agreements or EU regulations;</li>
+      <li><strong>Technical logs and security records:</strong> retained proportionately for system integrity, security monitoring, and legal compliance;</li>
+      <li><strong>Email correspondence:</strong> retained only as necessary for operational or legal purposes.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>4. Archiving and Anonymization</h2>
+    <p>Where historical documentation is preserved for research, audit, or transparency purposes, personal identifiers are removed or anonymized unless continued retention is required by law.</p>
+    <p>Archival records are stored with appropriate technical and organizational safeguards.</p>
+  </section>
+
+  <section>
+    <h2>5. Right to Erasure</h2>
+    <p>Data subjects have the right to request erasure of personal data in accordance with Article 17 GDPR, subject to statutory retention obligations or overriding legal grounds.</p>
+    <p>Deletion requests are assessed and processed without undue delay.</p>
+  </section>
+
+  <section>
+    <h2>6. Secure Deletion</h2>
+    <p>The Foundation applies appropriate technical measures to ensure secure deletion or irreversible anonymization of data once retention periods expire.</p>
+  </section>
+
+  <section>
+    <h2>7. Review and Updates</h2>
+    <p>This Policy is reviewed periodically and may be updated to reflect regulatory or operational changes.</p>
+    <p>The binding framework remains applicable EU and Polish law.</p>
+  </section>
+
+</main>
+
+<footer class="legal-footer">
+  <div class="container">
+    <p>© 2026 Fundacja BBS — Better Balance System. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
